# FinWise-Teen

./: .gitignore  README.md  debug_routes.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_api.py  run_dashboard.py  supabase_schema.sql  test-gemini.ts
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
app/onboard/: page.tsx
app/profile/: page.tsx
app/signup/: page.tsx
app/widget/: page.tsx
components/: DashboardNav.tsx  MarketPulse.tsx
components/ui/: AnimatedGrid.tsx  BlueprintGrid.tsx  FinWiseGenie.tsx  FinancialFitnessScore.tsx  GlowCard.tsx  MicroSparkline.tsx  StressTester.tsx
dashboard/: __init__.py  app.py
dashboard/components/: __init__.py  regime_panel.py  risk_panel.py  signal_card.py  trade_panel.py
dashboard/styles/: main.css
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AssetCard.tsx  BrandLogo.tsx  DashboardNav.tsx  MarketPulse.tsx  Navbar.tsx
frontend/lib/: market.ts  utils.ts
lib/: market.ts  supabase.ts  utils.ts
public/: manifest.json
src/: __init__.py  config.py
src/api/: __init__.py  finwise_routes.py  routes.py  scheduler.py
src/confluence/: __init__.py  engine.py  indicators.py
src/ingestion/: __init__.py  broker_stub.py  data_buffer.py  validator.py
src/models/: __init__.py  market_data.py  regime.py  risk.py  signal.py  trade.py
src/options/: __init__.py  (+1 more)
tests/: __init__.py  test_confluence.py  test_options.py  test_regime.py  test_risk.py  test_trade.py
(+92 files in other folders)
